jacobian pinv controller for real robot added.

--- a/examples/jacobian_pseudo_inv_controller .ipynb
+++ b/examples/jacobian_pseudo_inv_controller .ipynb
@@ -39,18 +39,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Interface Running...\n"
-     ]
-    }
-   ],
+   "source": [
+    "## Run With Real Robot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from FR3Py.interfaces import FR3Real\n",
     "robot = FR3Real()"
@@ -58,25 +58,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[69], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[0;32m----> 2\u001b[0m     time\u001b[39m.\u001b[39;49msleep(\u001b[39m0.01\u001b[39;49m)\n\u001b[1;32m      3\u001b[0m     robot\u001b[39m.\u001b[39msend_joint_command(np\u001b[39m.\u001b[39marray([\u001b[39m0.1\u001b[39m,\u001b[39m0\u001b[39m,\u001b[39m0\u001b[39m,\u001b[39m0\u001b[39m,\u001b[39m0\u001b[39m,\u001b[39m0\u001b[39m,\u001b[39m0\u001b[39m]))\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import time\n",
+    "import numpy as np\n",
+    "from FR3Py.controllers.waypoint_controller import WaypointController\n",
+    "controller = WaypointController(kp=1.5)\n",
+    "# Read the initila pose of the robot\n",
+    "time.sleep(1)\n",
+    "state = robot.get_state()\n",
+    "\n",
+    "q, dq = state['q'], state['dq']\n",
+    "p0 = controller.robot.getInfo(q,dq)['P_EE']\n",
+    "R0 = controller.robot.getInfo(q,dq)['R_EE']\n",
+    "T0 = np.vstack([np.hstack([R0, p0.reshape(3,1)]), np.array([0,0,0,1])])\n",
+    "start_time = time.time()\n",
     "while True:\n",
     "    time.sleep(0.01)\n",
-    "    robot.send_joint_command(np.array([0.1,0,0,0,0,0,0]))"
+    "    t = time.time()-start_time\n",
+    "    x = 0.1*np.sin(t)\n",
+    "    T= T0@np.vstack([np.hstack([np.eye(3), np.array([0,0,x]).reshape(3,1)]), np.array([0,0,0,1])])\n",
+    "    state = robot.get_state()\n",
+    "    q, dq = state['q'], state['dq']\n",
+    "    cmd = controller.compute(q,dq, T_cmd=T)\n",
+    "    robot.send_joint_command(cmd[0:7])"
    ]
   },
   {
