a cell for reading  the wall pose is added

--- a/examples/jacobian_pseudo_inv_controller .ipynb
+++ b/examples/jacobian_pseudo_inv_controller .ipynb
@@ -87,9 +87,61 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# TF Pose Capture Node"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run the following cell to repeatedly read the pose of the wall published as a TF message and set it to a global valirable pose:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import rospy\n",
+    "import tf\n",
+    "import threading\n",
+    "\n",
+    "def tf_listener_thread():\n",
+    "    global pose\n",
+    "\n",
+    "    rospy.init_node(\"tf_listener_node\")\n",
+    "    listener = tf.TransformListener()\n",
+    "\n",
+    "    # the frame where the data originated\n",
+    "    source_frame = \"/camera_color_optical_frame\"\n",
+    "\n",
+    "    # the frame where the data should be transformed\n",
+    "    target_frame = \"/wall\"\n",
+    "\n",
+    "    listener.waitForTransform(target_frame, source_frame, rospy.Time(), rospy.Duration(4.0))\n",
+    "\n",
+    "    # Main loop to continuously update the pose\n",
+    "    while not rospy.is_shutdown():\n",
+    "        try:\n",
+    "            (trans, rot) = listener.lookupTransform(target_frame, source_frame, rospy.Time(0))\n",
+    "            pose = (trans, rot)\n",
+    "            rospy.sleep(0.1)  # Adjust the sleep duration as needed\n",
+    "        except (tf.LookupException, tf.ConnectivityException, tf.ExtrapolationException):\n",
+    "            rospy.logwarn(\"Error occurred while retrieving TF transform.\")\n",
+    "\n",
+    "# Initialize the global pose variable\n",
+    "pose = None\n",
+    "\n",
+    "# Create and start the thread\n",
+    "tf_thread = threading.Thread(target=tf_listener_thread)\n",
+    "tf_thread.start()"
+   ]
   }
  ],
  "metadata": {
