reading tf from ros

--- a/examples/jacobian_pseudo_inv_controller .ipynb
+++ b/examples/jacobian_pseudo_inv_controller .ipynb
@@ -19,9 +19,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "pybullet build time: May 20 2022 19:44:17\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "import numpy as np\n",
@@ -104,34 +128,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import rospy\n",
     "import tf\n",
+    "import time\n",
     "import threading\n",
+    "global pose\n",
+    "from scipy.spatial.transform import Rotation\n",
+    "import numpy as np\n",
+    "import pickle\n",
+    "from copy import deepcopy\n",
     "\n",
+    "rospy.init_node(\"tf_listener_node\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def tf_listener_thread():\n",
-    "    global pose\n",
     "\n",
-    "    rospy.init_node(\"tf_listener_node\")\n",
+    "    def get_T(p, R):\n",
+    "        T = np.eye(4)\n",
+    "        T[:3, :3] = R\n",
+    "        T[:3, 3] = p\n",
+    "\n",
+    "        return T\n",
+    "\n",
+    "    global pose\n",
+    "    global board_pos\n",
+    "    global board_ori\n",
+    "\n",
+    "    camera_to_base_transform = np.load(\"/home/franka-ws/manipulation/data/camera_to_grey_base_transform.npy\")\n",
+    "\n",
     "    listener = tf.TransformListener()\n",
     "\n",
     "    # the frame where the data originated\n",
-    "    source_frame = \"/camera_color_optical_frame\"\n",
+    "    target_frame = \"/camera_color_optical_frame\"\n",
     "\n",
     "    # the frame where the data should be transformed\n",
-    "    target_frame = \"/wall\"\n",
+    "    source_frame = \"/wall\"\n",
     "\n",
     "    listener.waitForTransform(target_frame, source_frame, rospy.Time(), rospy.Duration(4.0))\n",
     "\n",
     "    # Main loop to continuously update the pose\n",
     "    while not rospy.is_shutdown():\n",
     "        try:\n",
-    "            (trans, rot) = listener.lookupTransform(target_frame, source_frame, rospy.Time(0))\n",
-    "            pose = (trans, rot)\n",
-    "            rospy.sleep(0.1)  # Adjust the sleep duration as needed\n",
+    "            (trans, quat) = listener.lookupTransform(target_frame, source_frame, rospy.Time(0))\n",
+    "            \n",
+    "            pos = np.array(trans)\n",
+    "            Rot = Rotation.from_quat(quat).as_matrix()\n",
+    "\n",
+    "            T = camera_to_base_transform @ get_T(pos, Rot)\n",
+    "            board_pos = T[:3, 3]\n",
+    "            board_rot = T[:3, :3]\n",
+    "            board_ori = Rotation.from_matrix(board_rot).as_quat()\n",
+    "\n",
+    "            rospy.sleep(0.001)  # Adjust the sleep duration as needed\n",
     "        except (tf.LookupException, tf.ConnectivityException, tf.ExtrapolationException):\n",
     "            rospy.logwarn(\"Error occurred while retrieving TF transform.\")\n",
     "\n",
@@ -141,6 +199,49 @@
     "# Create and start the thread\n",
     "tf_thread = threading.Thread(target=tf_listener_thread)\n",
     "tf_thread.start()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 13\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mint\u001b[39m(\u001b[39m1e5\u001b[39m)):\n\u001b[1;32m      5\u001b[0m     dataset\u001b[39m.\u001b[39mappend(\n\u001b[1;32m      6\u001b[0m         {\n\u001b[1;32m      7\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mtime\u001b[39m\u001b[39m\"\u001b[39m: time\u001b[39m.\u001b[39mtime() \u001b[39m-\u001b[39m initial_time,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     10\u001b[0m         }\n\u001b[1;32m     11\u001b[0m     )\n\u001b[0;32m---> 13\u001b[0m     time\u001b[39m.\u001b[39;49msleep(\u001b[39m1\u001b[39;49m\u001b[39m/\u001b[39;49m\u001b[39m60\u001b[39;49m)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "dataset = []\n",
+    "initial_time = time.time()\n",
+    "\n",
+    "for i in range(int(1200)):\n",
+    "    dataset.append(\n",
+    "        {\n",
+    "            \"time\": time.time() - initial_time,\n",
+    "            \"board_pos\": deepcopy(board_pos),\n",
+    "            \"board_ori\": deepcopy(board_ori),\n",
+    "        }\n",
+    "    )\n",
+    "\n",
+    "    time.sleep(1/60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " with open(\"../data/moving_board_data.pickle\", \"wb\") as handle:\n",
+    "        pickle.dump(dataset, handle, protocol=pickle.HIGHEST_PROTOCOL)"
    ]
   }
  ],
