joystick control example added

--- a/examples/joystick_control.ipynb
+++ b/examples/joystick_control.ipynb
@@ -5,45 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Jacobian Pseudo Inverse Controller\n",
-    "ToDo: Add theory of operation"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Run In Simulation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import time\n",
-    "import numpy as np\n",
-    "from FR3Py.controllers.waypoint_controller import WaypointController\n",
-    "from FR3Py.envs.pybullet import FR3Sim\n",
-    "\n",
-    "robot = FR3Sim(render_mode='human', mode='velocity', Ts=1/1000)\n",
-    "robot.reset()\n",
-    "controller = WaypointController(kp=2)\n",
-    "while True:\n",
-    "    q, dq = robot.get_state()\n",
-    "    dq_cmd = controller.compute(q, dq)\n",
-    "    robot.step(dq_cmd)\n",
-    "    time.sleep(1/1000)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Run With Real Robot"
+    "# Control The Robot with Joystick"
    ]
   },
   {
@@ -78,10 +40,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pyJoy.joy_daq import JoyManager\n",
+    "import time    \n",
+    "joy1  = JoyManager()\n",
+    "joy1.start_daq(joy_idx=0)\n",
+    "joy1.offset_calibration()\n",
+    "time.sleep(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import time\n",
     "import numpy as np\n",
     "from FR3Py.controllers.waypoint_controller import WaypointController\n",
-    "controller = WaypointController(kp=1.5)\n",
+    "controller = WaypointController(kp=4)\n",
     "# Read the initila pose of the robot\n",
     "time.sleep(1)\n",
     "state = robot.get_state()\n",
@@ -91,15 +67,42 @@
     "R0 = controller.robot.getInfo(q,dq)['R_EE']\n",
     "T0 = np.vstack([np.hstack([R0, p0.reshape(3,1)]), np.array([0,0,0,1])])\n",
     "start_time = time.time()\n",
+    "\n",
+    "x0, y0, z0 = 0.0, 0.0, 0.0 \n",
+    "R0 = np.eye(3)\n",
     "while True:\n",
+    "    analog, digital = joy1.read_values()\n",
+    "    cmd = np.array([analog[0],analog[1],analog[2]])\n",
+    "    for i in range(3):\n",
+    "        if np.abs(cmd[i])<0.1:\n",
+    "            cmd[i] = 0 \n",
+    "\n",
+    "    if digital[0]==0:\n",
+    "        x0 = x0 + cmd[0]*0.2/100\n",
+    "        y0 = y0 + cmd[1]*0.2/100\n",
+    "        z0 = z0 + cmd[2]*0.2/100\n",
+    "    else:\n",
+    "        omega_hat = np.array([[ 0,       -cmd[2],  cmd[1]],\n",
+    "                              [ cmd[2],   0,      -cmd[0]],\n",
+    "                              [-cmd[1],   cmd[0],      0]])\n",
+    "        R0 = R0@(np.eye(3)+omega_hat/100)\n",
+    "\n",
     "    time.sleep(0.01)\n",
-    "    t = time.time()-start_time\n",
-    "    x = 0.1*np.sin(t)\n",
-    "    T= T0@np.vstack([np.hstack([np.eye(3), np.array([0,0,x]).reshape(3,1)]), np.array([0,0,0,1])])\n",
+    "    T= T0@np.vstack([np.hstack([R0, np.array([x0,y0,z0]).reshape(3,1)]), np.array([0,0,0,1])])\n",
     "    state = robot.get_state()\n",
     "    q, dq = state['q'], state['dq']\n",
     "    cmd = controller.compute(q,dq, T_cmd=T)\n",
     "    robot.send_joint_command(cmd[0:7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "analog, digital = joy1.read_values()\n",
+    "cmd_vx,cmd_vy,cmd_vz = analog[0],analog[1],analog[2]"
    ]
   }
  ],
