apriltag tracker and realsense factory parameters added

--- a/examples/nerf_exp_signle_arm.ipynb
+++ b/examples/nerf_exp_signle_arm.ipynb
@@ -55,7 +55,20 @@
    "outputs": [],
    "source": [
     "from FR3Py.cameras import RealSenseCamera\n",
-    "camera = RealSenseCamera(VGA=False, enable_imu=False, enable_ir=False)"
+    "camera = RealSenseCamera(VGA=False, enable_imu=False, enable_ir=True, emitter_enabled=True, align_to_color=False)\n",
+    "ext_params = camera.getExtrinsics()\n",
+    "int_params = camera.getIntrinsics()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "with open('dataset/sep26/camera_params.pkl', 'wb') as f:\n",
+    "    pickle.dump({'ext_params':ext_params, 'ext_params':int_params}, f)"
    ]
   },
   {
@@ -70,11 +83,15 @@
     "import datetime\n",
     "import os\n",
     "import cv2\n",
+    "from FR3Py.trackers import ApriltagTracker\n",
+    "tracker = ApriltagTracker(tag_size=0.172, \n",
+    "                          intrinsic_matrix=int_params['RGB']['K'], \n",
+    "                          distortion_coeffs=int_params['RGB']['D'])\n",
     "\n",
     "current_datetime = datetime.datetime.now()\n",
     "formatted_datetime = current_datetime.strftime(\"%Y-%m-%d_%H-%M-%S\")\n",
     "shutter_old = 0 \n",
-    "dataset_path = 'dataset/scene2'\n",
+    "dataset_path = 'dataset/sep26/seq1/'\n",
     "\n",
     "def write_depth(depth, filename):\n",
     "    depth = depth.astype(np.uint16)\n",
@@ -137,10 +154,17 @@
     "        shutter_old = shutter\n",
     "        depth = camera.depth_frame\n",
     "        color = camera.color_frame\n",
+    "        tracker.process(camera.color_frame)\n",
+    "        detection = tracker.getTag(0)\n",
+    "        if detection is not None:\n",
+    "            apriltag_pose = detection['pose']\n",
+    "        else:\n",
+    "            apriltag_pose = None\n",
     "        print('Taking a picture')\n",
     "        write_depth(depth, os.path.join(dataset_path, 'depth', f'{stamp_ns}.png'))\n",
     "        write_color(color, os.path.join(dataset_path, 'color', f'{stamp_ns}.png'))\n",
     "        write_pose(pose, os.path.join(dataset_path, 'pose', f'{stamp_ns}.txt'))\n",
+    "        write_pose(apriltag_pose, os.path.join(dataset_path, 'apriltag_pose', f'{stamp_ns}.txt'))\n",
     "    else:\n",
     "        shutter_old = shutter\n",
     "    # time.sleep(0.01)\n",
@@ -156,7 +180,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tracker = ApriltagTracker(tag_size=0.172, \n",
+    "                          intrinsic_matrix=int_params['RGB']['K'], \n",
+    "                          distortion_coeffs=int_params['RGB']['D'])\n",
+    "tracker.process(camera.color_frame)\n",
+    "tracker.getTag(0)"
+   ]
   }
  ],
  "metadata": {
