depth map to pointcloude function and notebook is added.

--- a/examples/nerf_data_collector.ipynb
+++ b/examples/nerf_data_collector.ipynb
@@ -50,11 +50,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enabling streams for camera:  141322250720\n",
+      "Warning: HD color fps cannot be higher than 30\n",
+      "Warning: HD depth/infrared fps cannot be higher than 30\n"
+     ]
+    }
+   ],
    "source": [
-    "from FR3Py.cameras import RealSenseCamera\n",
+    "from FR3Py.vision.cameras import RealSenseCamera\n",
     "camera = RealSenseCamera(VGA=False, enable_imu=False, enable_ir=True, emitter_enabled=True, align_to_color=False)\n",
     "ext_params = camera.getExtrinsics()\n",
     "int_params = camera.getIntrinsics()"
@@ -68,7 +78,7 @@
    "source": [
     "import pickle\n",
     "with open('dataset/sep26/camera_params.pkl', 'wb') as f:\n",
-    "    pickle.dump({'ext_params':ext_params, 'ext_params':int_params}, f)"
+    "    pickle.dump({'ext_params':ext_params, 'int_params':int_params}, f)"
    ]
   },
   {
